# dsa

./: .clang-format  .clang-tidy  .gersemirc  .gitignore  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
cmake/: AddGitSubmodule.cmake  CPM.cmake  ConfigSafeGuards.cmake  EnableCoverage.cmake  LTO.cmake  Sanitizer.cmake  SetDefaultWarnings.cmake  SetProjectDefaults.cmake  SetSanitizers.cmake  Warnings.cmake
hdr/: misc.hpp  reduction.hpp  searching.hpp  sorting.hpp  utils.hpp  vector.hpp
src/: CMakeLists.txt  misc.cpp  reduction.cpp  searching.cpp  sorting.cpp  vector.cpp
src/misc/: CMakeLists.txt  misc.cpp  misc.hpp
src/searching/: CMakeLists.txt  searching.cpp  searching.hpp
src/sorting/: CMakeLists.txt  sorting.cpp  sorting.hpp
src/subcontainers/: CMakeLists.txt  subcontainers.cpp  subcontainers.hpp
src/test/: CMakeLists.txt  test.cpp  test.hpp
src/transforming/: CMakeLists.txt  transforming.cpp  transforming.hpp
src/vector/: CMakeLists.txt  vector.cpp  vector.hpp
tests/: CMakeLists.txt  test_misc.cpp  test_misc.hpp  test_reduction.cpp  test_searching.cpp  test_sorting.cpp  test_subcontainers.cpp  test_transforming.cpp  test_vector.cpp
